--- a/eCalcu.html
+++ b/eCalcu.html
@@ -12,34 +12,33 @@
     
     <h1>E-Calculator</h1>
     <hr>
-    <section>
         <div class="calcu">
             <div id="display"></div>
             <hr>
             <div class="buttons">
-                <div class="button">C</div>
-                <div class="button">&larr;</div>
-                <div id="oper" class="button">*</div>
-                <div id="oper" class="button">/</div>
-                <div class="button">7</div>
-                <div class="button">8</div>
-                <div class="button">9</div>
-                <div id="oper" class="button">-</div>
-                <div class="button">4</div>
-                <div class="button">5</div>
-                <div class="button">6</div>
-                <div id="oper" class="button">+</div>
-                <div class="button">1</div>
-                <div class="button">2</div>
-                <div class="button">3</div>
-                <div id="" class="button">.</div>
-                <div id="" class="button">(</div>
-                <div class="button">0</div>
-                <div id="" class="button">)</div>
-                <div id="equal"class="button">=</div>
+                <div class="button" id="delAll">C</div>
+                <div class="button" id="delOne">&larr;</div>
+                <input type="button" value="*" id="oper">
+                <input type="button" value="/" id="oper">
+                <input type="button" value="7" class="numBtn">
+                <input type="button" value="8" class="numBtn">
+                <input type="button" value="9" class="numBtn">
+                <input type="button" value="-" id="oper">
+                <input type="button" value="4" class="numBtn">
+                <input type="button" value="5" class="numBtn">
+                <input type="button" value="6" class="numBtn">
+                <input type="button" value="+" id="oper">
+                <input type="button" value="1" class="numBtn">
+                <input type="button" value="2" class="numBtn">
+                <input type="button" value="3" class="numBtn">
+                <input type="button" value="." class="point">
+                <div class="trans"></div>
+                <input type="button" value="0" class="numBtn">
+                <div class="trans"></div>
+                <input type="button" value="=" class="button" id="equal">
             </div>
         </div>
-    </section>
+    
 
     <script src="./eCalcu.js"></script>
 </body>
